--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "three": "^0.160.0"
   },
   "devDependencies": {
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "vite-plugin-static-copy": "^3.1.4"
   }
 }
